<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/transactionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- Transfer için hedef IBAN -->
    <EditText
        android:id="@+id/etTargetIban"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/transaction_hint_target_iban"
        android:inputType="text"
        android:layout_marginBottom="16dp"/>

    <!-- İşlem miktarı -->
    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/transaction_hint_amount"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp"/>

    <!-- Transfer butonu -->
    <Button
        android:id="@+id/btnTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_btn_transfer"
        android:layout_marginBottom="16dp"/>

    <!-- Yükleniyor göstergesi -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>
</LinearLayout>
